# BazelIssues

./: .bazelrc  WORKSPACE
module/: BUILD.bazel
module/src/main/java/com/sample/: HelloWorld.txt  SampleMain.java
module/src/main/resources/: logback.xml
